--- a/DisciplesUnreal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/DisciplesUnreal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,6 +101,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowHeight=694
 MultipleInstancePositions=(X=1922,Y=88)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
