--- a/DisciplesUnreal/Saved/Config/Windows/GameUserSettings.ini
+++ b/DisciplesUnreal/Saved/Config/Windows/GameUserSettings.ini
@@ -2,11 +2,11 @@
 bUseVSync=False
 bUseDynamicResolution=False
 ResolutionSizeX=2560
-ResolutionSizeY=1440
+ResolutionSizeY=1377
 LastUserConfirmedResolutionSizeX=2560
-LastUserConfirmedResolutionSizeY=1440
-WindowPosX=-1
-WindowPosY=-1
+LastUserConfirmedResolutionSizeY=1377
+WindowPosX=0
+WindowPosY=23
 FullscreenMode=1
 LastConfirmedFullscreenMode=1
 PreferredFullscreenMode=1
@@ -26,4 +26,15 @@ LastGPUBenchmarkResult=-1.000000
 LastGPUBenchmarkMultiplier=1.000000
 bUseHDRDisplayOutput=False
 HDRDisplayOutputNits=1000
+
+[ScalabilityGroups]
+sg.ResolutionQuality=100.000000
+sg.ViewDistanceQuality=3
+sg.AntiAliasingQuality=3
+sg.ShadowQuality=3
+sg.PostProcessQuality=3
+sg.TextureQuality=3
+sg.EffectsQuality=3
+sg.FoliageQuality=3
+sg.ShadingQuality=3
 
